MB-40052 [1/3]: Decouple BackfillManager and EvpEngine

Modify BackfillManager so it doesn't rely directly on
EventuallyPersistentEngine, instead it is passed references to the two
sub-objects it cares about (KVBucket, DcpConnMap) and the 3 config
parameters.

This makes it significantly simpler to unit-test BackfillManager
functionality relased to DcpConnMap (i.e. backfill tracking at the
bucket level) - for example a mock DcpConnMap can be injected directly
without having to somehow first create an entire
EventuallyPersistentEngine.

Change-Id: I332183984907492d3c7765fbae789f6124eabce1
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/130974
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: James Harrison <james.harrison@couchbase.com>