engines/ep/src/dcp/backfill-manager.cc
@@ -22,7 +22,6 @@
 #include "dcp/backfill_disk.h"
 #include "dcp/dcpconnmap.h"
 #include "dcp/producer.h"
-#include "ep_engine.h"
 #include "ep_time.h"
 #include "executorpool.h"
 #include "kv_bucket.h"
@@ -96,19 +95,31 @@ std::chrono::microseconds BackfillManagerTask::maxExpectedDuration() {
     return std::chrono::milliseconds(300);
 }
 
-BackfillManager::BackfillManager(EventuallyPersistentEngine& e)
-    : engine(e), managerTask(NULL) {
-    Configuration& config = e.getConfiguration();
-
+BackfillManager::BackfillManager(KVBucket& kvBucket,
+                                 DcpConnMap& dcpConnMap,
+                                 size_t scanByteLimit,
+                                 size_t scanItemLimit,
+                                 size_t backfillByteLimit)
+    : kvBucket(kvBucket), dcpConnMap(dcpConnMap), managerTask(NULL) {
     scanBuffer.bytesRead = 0;
     scanBuffer.itemsRead = 0;
-    scanBuffer.maxBytes = config.getDcpScanByteLimit();
-    scanBuffer.maxItems = config.getDcpScanItemLimit();
+    scanBuffer.maxBytes = scanByteLimit;
+    scanBuffer.maxItems = scanItemLimit;
 
     buffer.bytesRead = 0;
-    buffer.maxBytes = config.getDcpBackfillByteLimit();
+    buffer.maxBytes = backfillByteLimit;
     buffer.nextReadSize = 0;
     buffer.full = false;
+}
+
+BackfillManager::BackfillManager(KVBucket& kvBucket,
+                                 DcpConnMap& dcpConnmap,
+                                 const Configuration& config)
+    : BackfillManager(kvBucket,
+                      dcpConnmap,
+                      config.getDcpScanByteLimit(),
+                      config.getDcpScanItemLimit(),
+                      config.getDcpBackfillByteLimit()) {
 }
 
 void BackfillManager::addStats(DcpProducer& conn,
@@ -137,7 +148,7 @@ BackfillManager::~BackfillManager() {
         UniqueDCPBackfillPtr backfill = std::move(activeBackfills.front());
         activeBackfills.pop_front();
         backfill->cancel();
-        engine.getDcpConnMap().decrNumActiveSnoozingBackfills();
+        dcpConnMap.decrNumActiveSnoozingBackfills();
     }
 
     while (!snoozingBackfills.empty()) {
@@ -145,7 +156,7 @@ BackfillManager::~BackfillManager() {
                 std::move((snoozingBackfills.front()).second);
         snoozingBackfills.pop_front();
         backfill->cancel();
-        engine.getDcpConnMap().decrNumActiveSnoozingBackfills();
+        dcpConnMap.decrNumActiveSnoozingBackfills();
     }
 
     while (!pendingBackfills.empty()) {
@@ -163,7 +174,7 @@ BackfillManager::ScheduleResult BackfillManager::schedule(
         UniqueDCPBackfillPtr backfill) {
     LockHolder lh(lock);
     ScheduleResult result;
-    if (engine.getDcpConnMap().canAddBackfillToActiveQ()) {
+    if (dcpConnMap.canAddBackfillToActiveQ()) {
         initializingBackfills.push_back(std::move(backfill));
         result = ScheduleResult::Active;
     } else {
@@ -174,7 +185,8 @@ BackfillManager::ScheduleResult BackfillManager::schedule(
     if (managerTask && !managerTask->isdead()) {
         ExecutorPool::get()->wake(managerTask->getId());
     } else {
-        managerTask.reset(new BackfillManagerTask(engine, shared_from_this()));
+        managerTask.reset(new BackfillManagerTask(kvBucket.getEPEngine(),
+                                                  shared_from_this()));
         ExecutorPool::get()->schedule(managerTask);
     }
     return result;
@@ -272,7 +284,7 @@ backfill_status_t BackfillManager::backfill() {
         return backfill_finished;
     }
 
-    if (engine.getKVBucket()->isMemoryUsageTooHigh()) {
+    if (kvBucket.isMemoryUsageTooHigh()) {
         EP_LOG_INFO(
                 "DCP backfilling task temporarily suspended "
                 "because the current memory usage is too high");
@@ -293,7 +305,7 @@ backfill_status_t BackfillManager::backfill() {
                 (*a_itr)->cancel();
                 toDelete.push_back(std::move(*a_itr));
                 a_itr = activeBackfills.erase(a_itr);
-                engine.getDcpConnMap().decrNumActiveSnoozingBackfills();
+                dcpConnMap.decrNumActiveSnoozingBackfills();
             } else {
                 ++a_itr;
             }
@@ -352,7 +364,7 @@ backfill_status_t BackfillManager::backfill() {
             break;
         case backfill_finished:
             lh.unlock();
-            engine.getDcpConnMap().decrNumActiveSnoozingBackfills();
+            dcpConnMap.decrNumActiveSnoozingBackfills();
             break;
         case backfill_snooze: {
             snoozingBackfills.emplace_back(ep_current_time(),
@@ -365,8 +377,7 @@ backfill_status_t BackfillManager::backfill() {
 }
 
 void BackfillManager::movePendingToInitializing() {
-    while (!pendingBackfills.empty() &&
-           engine.getDcpConnMap().canAddBackfillToActiveQ()) {
+    while (!pendingBackfills.empty() && dcpConnMap.canAddBackfillToActiveQ()) {
         initializingBackfills.splice(initializingBackfills.end(),
                                      pendingBackfills,
                                      pendingBackfills.begin());
