engines/ep/tests/mock/mock_dcp_backfill_mgr.h
@@ -26,7 +26,9 @@
 class MockDcpBackfillManager : public BackfillManager {
 public:
     MockDcpBackfillManager(EventuallyPersistentEngine& theEngine)
-        : BackfillManager(theEngine) {
+        : BackfillManager(*theEngine.getKVBucket(),
+                          theEngine.getDcpConnMap(),
+                          theEngine.getConfiguration()) {
     }
 
     void setBackfillBufferSize(size_t newSize) {
